Fixed url field bug

--- a/views/index.html
+++ b/views/index.html
@@ -16,5 +16,7 @@
 	<input type="submit" value="Upload" /></form>
     </div>
     <!-- END file upload form -->
+    <br>
+    <p><a href="/screenshot">Screenshot a Website</a></p>
   </body>
 </html>
